syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";

service DiscountProtoService {
  rpc GetDiscount(GetDiscountRequest) returns (CouponModel);
  rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);
  rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);
  rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message GetDiscountRequest {
  string id = 1;
}

message CouponModel {
  string id = 1;
  string productId = 2;
  string description = 3;
  int32 amount = 4;
  int32 quantity = 5;
}

message CreateDiscountRequest {
  CouponModel coupon = 1;
}
message UpdateDiscountRequest {
  CouponModel coupon = 1;
}

message DeleteDiscountRequest {
  string id = 1;
}

message DeleteDiscountResponse {
  bool success = 1;
}